chore: plat virtual display

--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="elevator-view"></div>
+      <div class="elevator-view">
+        <ul id="floor-list" class="floor-list"></ul>
+      </div>
       <div class="form-view">
         <div class="form-container">
           <div class="onboarding-list">
