--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link href="./style.css" rel="stylesheet" />
+    <link href="./app/assets/style.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
@@ -44,6 +44,6 @@
       </div>
     </div>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./app/main.js"></script>
   </body>
 </html>
